Add redis configuration

--- a/scala/web/chat/conf/application.conf
+++ b/scala/web/chat/conf/application.conf
@@ -1,1 +1,12 @@
 # https://www.playframework.com/documentation/latest/Configuration
+play.modules.enabled += "play.api.cache.redis.RedisCacheModule"
+
+play.cache.redis {
+  host:       localhost
+  # redis server: port
+  port:       6379
+  # redis server: database number (optional)
+  database:   0
+  # authentication password (optional)
+  password:   null
+}
