Add database configuration

--- a/scala/web/chat/conf/application.conf
+++ b/scala/web/chat/conf/application.conf
@@ -10,3 +10,9 @@ play.cache.redis {
   # authentication password (optional)
   password:   null
 }
+
+# Default database configuration using PostgreSQL database engine
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://localhost/chat"
+db.default.username=chatuser
+db.default.password="chat_user_password"
